<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">City Game</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_about">Over</string>
    <string name="btn_start">Start</string>
    <string name="btn_scan_qr">Scan QR-Code</string>
    <string name="btn_answer">Antwoord</string>
    <string name="btn_info">Meer info</string>
    <string name="next_location">Uw volgende stopplaats is </string>
    <string name="title_activity_next_location">Volgende stopplaats</string>
    <string name="QR_invalid">De QR-code die u scande hoort niet bij ons stadsspel. Gelieve een correcte QR-code te scannen.</string>
    <string name="title_activity_question">Vraag</string>
    <string name="load_game_progress_title">Bezig met laden...</string>
    <string name="load_game_progress_content">Het spel is aan het laden. Dit kan een minuut duren.</string>
    <string name="login_progress_title">Bezig met aanmelden...</string>
    <string name="login_progress_content">Het systeem contacteert onze servers. Dit kan een minuut duren.</string>
    <string name="login_fail_title">Aanmelden mislukt!</string>
    <string name="login_fail_content">Aanmelden is mislukt. Controleer uw wachtwoord.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Terug</string>
    <string name="title_activity_info">Informatie</string>
    <string name="question_response_question_label">Vraag: </string>
    <string name="question_response_user_input">Ingevoerd: </string>
    <string name="question_response_correct_answer">Antwoord: </string>
    <string name="correct_answers">Correcte antwoorden: </string>
    <string name="title_activity_gameresults">Uw score</string>
    <string name="title_activity_register">Registratie</string>
    <string name="registration_success">Uw account is succesvol aangemaakt.</string>
    <string name="login_success">U bent nu aangemeld!</string>
    <string name="login_failed">Aanmelden mislukt, controleer uw wachtwoord</string>
    <string name="registering_dialog_title">Bezig met registreren...</string>
    <string name="registering_dialog_content">Dit kan een minuut duren.</string>
    <string name="register_fail_title">Registratie mislukt</string>
    <string name="register_fail_content">Mogelijk is de gebruikersnaam al in gebruik, probeer een andere gebruikersnaam.</string>
    <string name="instruction_tap_video">Tap op de video en tap dan op de play knop om hem af te spelen.</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pause">Pauze</string>
    <string name="title_activity_pause">Pauze</string>
    <string name="title_activity_about">Over de app</string>
    <string name="about_created_by">Gemaakt door:</string>
    <string name="jorne">Jorne De Smedt</string>
    <string name="christina">Christina Korosec</string>
    <string name="laurenz">Laurenz Jolling</string>
    <string name="about_collab">In samenwerking met:</string>
    <string name="about_special_thanks">Speciale dank aan:</string>
    <string name="about_school">Hogeschool PXL</string>
    <string name="about_dept_tourism"><![CDATA[PXL Departement Media & Tourisme]]></string>
    <string name="about_dept_it">PXL Departement IT</string>
    <string name="tilkin">Servaas Tilkin</string>
    <string name="btn_show_score">Toon score</string>
    <string name="game_finished_title">Al uitgespeeld</string>
    <string name="game_finished_content">U heeft dit spel al uitgespeeld. Scan een ander spel in om te spelen.</string>
    <string name="btn_ok">OK</string>
    <string name="registration_web_fail">Er ging iets mis tijdens de registratie.</string>
    <string name="registration_err_password">Uw wachtwoord moet minimum 4 karakters bevatten.</string>
    <string name="registration_err_username">Uw gebruikersnaam moet minimum 6 karakters bevatten.</string>
    <string name="registration_err_email">Uw emailadres is incorrect</string>
    <string name="err_no_internet_title">Geen internetverbinding</string>
    <string name="err_no_internet_content">U kan geen nieuw spel starten en u kan zich niet aanmelden zonder een internetverbinding. Verbind met het internet vooraleer verder te gaan.</string>
    <string name="btn_photo">Camera</string>
    <string name="btn_main_menu">Hoofdmenu</string>
    <string name="logout">Afmelden</string>
    <string name="SharedPrefsKey">CityGameSharedPreferences</string>
    <string name="err_no_camera">Fout: We konden de camera op uw toestel niet gebruiken</string>
    <string name="show_photo">Toon Foto</string>
    <string name="title_activity_photo_view">Foto\'s van uw spel!</string>
    <string name="img_tickmark">tickmark</string>
    <string name="logo_description">CityGame logo</string>

</resources>
