<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.pxl.citygame.AboutActivity">

    <TextView android:text="@string/about_created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_created_by"
        android:textAppearance="@android:style/TextAppearance.Large"
        />

    <TextView android:text="@string/christina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_christina"
        android:layout_below="@id/tv_created_by"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <TextView android:text="@string/jorne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_jorne"
        android:layout_below="@id/tv_christina"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <TextView android:text="@string/laurenz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_laurenz"
        android:layout_below="@id/tv_jorne"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <TextView android:text="@string/about_collab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_in_collaboration_with"
        android:layout_below="@id/tv_laurenz"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginTop="10dp"
        />

    <TextView android:text="@string/about_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_school"
        android:layout_below="@id/tv_in_collaboration_with"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <TextView android:text="@string/about_dept_tourism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dept_tourism"
        android:layout_below="@id/tv_school"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <TextView android:text="@string/about_dept_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dept_it"
        android:layout_below="@id/tv_dept_tourism"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <TextView android:text="@string/about_special_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_special_thanks"
        android:layout_below="@id/tv_dept_it"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginTop="10dp"
        />
    <TextView android:text="@string/tilkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tilkin"
        android:layout_below="@id/tv_special_thanks"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pxlLogo"
        android:layout_below="@+id/tv_tilkin"
        android:src="@drawable/logo_pxl_hogeschool" />


</RelativeLayout>
